5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1671_1100.log
== TEST (2019-04-29 12:41:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:41:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.206895
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pitada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:43:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
print("Animal: Invalido")
-- EXECUTION TIME:
0.155136
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pitada
Animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:43:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
print("Animal: Invalido")
-- EXECUTION TIME:
0.190626
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 100
Animal: Garoupa
Animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:43:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
print("Animal: Invalido")
-- EXECUTION TIME:
0.193936
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pitada
Animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:43:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:44:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print(" Animal: Invalido ")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:44:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print(" Animal: Invalido ")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:44:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print(" Animal: Invalido ")

-- EXECUTION TIME:
0.21626
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
 Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pitada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:44:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print(" Animal: Invalido ")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:44:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print(" Animal: Invalido ")7
	

-- ERROR:
File "XXXX", line 21
    print(" Animal: Invalido ")7
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:44:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print(" Animal: Invalido ")
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:45:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print(" Animal: Invalido ")
	
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:45:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print(" Animal: Invalido ")
	
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:45:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print(" Animal: Invalido ")
	
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:45:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print(" Animal: Invalido ")
	
	

-- EXECUTION TIME:
0.176328
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
 Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pitada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:45:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print(" Animal: Invalido ")
	
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:46:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga ")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:47:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(( 2 == X )):
	print("Animal: Tartaruga ")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	
	

-- EXECUTION TIME:
0.147353
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pitada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:47:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(2 == X):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:47:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(2 == X):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	
	

-- EXECUTION TIME:
0.133748
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pitada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:48:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(2 == X):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:48:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(2 == X):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pitada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	
	

-- EXECUTION TIME:
0.191068
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pitada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:49:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(2 == X):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pintada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:49:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("qual o valor de uma cedula:"))

print("Entrada:", X )

if(2 == X):
	print("Animal: Tartaruga")
elif(5 == X):
	print("Animal: Garca")
elif(10 == X):
	print("Animal: Arara")
elif(20 == X):
	print("Animal: Mico-leao-dourado")
elif(50 == X):
	print("Animal: Onca-pintada")
elif(100 == X):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	
	

-- EXECUTION TIME:
0.198608
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
